--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,25 @@
 {
-    "name": "sultann/wp-query-builder",
-    "description": "WP Query Builder is a lightweight and efficient SQL Query Builder based on wpdb for WordPress. It supports complicated query generation.",
-    "license": "MIT",
-    "type": "library",
-    "keywords": [
-        "wordpress",
-        "query builder",
-        "database"
-    ],
-    "authors": [
-        {
-            "name": "MD Sultan Nasir Uddin",
-            "email": "manikdrmc@gmail.com"
-        }
-    ],
-    "require": {
-        "php": ">=5.4"
-    },
-    "autoload": {
-        "psr-4": {
-            "PluginEver\\QueryBuilder\\": "src"
-        }
-    },
-    "minimum-stability": "dev"
+  "name": "wp-forge/wp-query-builder",
+  "description": "A lightweight and efficient SQL query builder for WordPress.",
+  "license": "GPL-2.0-or-later",
+  "type": "library",
+  "keywords": [
+    "wordpress",
+    "query builder",
+    "database"
+  ],
+  "authors": [
+    {
+      "name": "Micah Wood",
+      "email": "micah@wpscholar.com"
+    }
+  ],
+  "require": {
+    "php": ">=5.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "WP_Forge\\QueryBuilder\\": "src"
+    }
+  }
 }
